# LLM-Resonance-Lab

./: .gitignore  CLAUDE.md  LLM Resonance Lab PRD_V1.0.md  LLM Resonance Lab项目诞生的背景.md  README.md  models.yaml.example  pyproject.toml  requirements.txt  run.py  workflow_intro.md
cases/: case_001_interview.md  case_002_offer_choice.md  case_003_tech_wave.md  case_004_social_anxiety.md  case_005_writing.md  case_006_long_conversation.md
lab/: __init__.py  batch_runner.py  blind.py  case_loader.py  cli.py  config.py  console.py  evaluation.py  journal.py  llm_adapter.py  marathon_runner.py  model_registry.py
marathons/career_choice/: turn_01.md  turn_02.md  turn_03.md  turn_04.md  turn_05.md
tests/: conftest.py  test_batch_runner.py  test_blind.py  test_case_loader.py  test_cli.py  test_design_guards.py  test_evaluation.py  test_journal.py  test_llm_adapter.py  test_marathon_runner.py  test_model_registry.py
