[project]
name = "llm-resonance-lab"
version = "1.0.0"
description = "Discover which LLM resonates most with your thinking style — local, CLI + Markdown, no frontend."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "litellm>=1.40,<2.0",
    "typer>=0.12,<1.0",
    "PyYAML>=6.0,<7.0",
    "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "mypy>=1.10",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["lab", "run.py"]
